updated timeline and scrollmagic

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,8 +15,8 @@
     "confirm_overwrite_newer": true,
     
     "host": "stevedillon.net",
-    "user": "steve@stevedillon.net",
-    "password": "Castro2018!",
+    "user": "nalu@stevedillon.net",
+    "password": "nalu2018!",
     //"port": "22",
     
     "remote_path": "/nalu",
